--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,12 @@
 spring:
     application:
         name: api.contas
+
+    servlet:
+        multipart:
+            file-size-threshold: 2KB
+            max-file-size: 200MB
+            max-request-size: 215MB
     
     datasource:
         url: jdbc:postgresql://localhost:5432/contas
@@ -14,3 +20,4 @@ spring:
 springdoc:
     api-docs:
         path: /api-docs
+
