--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,7 +9,7 @@ spring:
             max-request-size: 215MB
     
     datasource:
-        url: jdbc:postgresql://localhost:5432/contas
+        url: jdbc:postgresql://postgres.db:5432/contas
         username: user
         password: secret
     jpa:
